# dumpster

./: .Rocket.toml  Cargo.toml  README.md  package-lock.json
public/: app.js  index.html  login.html  login.js  panel.html  panel.js  style.css  upload.js
src/: auth.rs  config.rs  files.rs  main.rs  shared.rs  test.rs  upload.rs  user.rs
src/files/: mod.rs
storage/users/: .example.user.toml  .gitignore
