[package]
name = "dumpster"
version = "0.1.0"
authors = ["cvgore <kacper@cvgo.re>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.9"
toml = "0.5"
password-hash = "0.3"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
rocket-governor = "0.0.1-rc.9"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["rc"]

[dependencies.tokio]
version = "1.10"
default-features = false
features = ["fs", "rt-multi-thread", "io-util", "macros", "parking_lot"]